--- a/Petrol station/index.html
+++ b/Petrol station/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600&family=PT+Sans:ital,wght@0,700;1,400&display=swap&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./src/assets/css/output.css">
     <title>UFI</title>
   </head>
   <body>
