--- a/Petrol station/index.html
+++ b/Petrol station/index.html
@@ -13,10 +13,6 @@
       rel="stylesheet"
     />
 
-    <!-- flowbite -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.css"  rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.js"></script>
-    
     <!-- leaflet -->
     <link
       rel="stylesheet"
@@ -35,11 +31,20 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css"
       rel="stylesheet"
     />
+    <!-- flowbite -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.css"  rel="stylesheet" /> -->
+
+    <!-- Tailwind element -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
     <link rel="stylesheet" href="./src/assets/css/output.css" />
     <title>UFI</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
