--- a/Petrol station/index.html
+++ b/Petrol station/index.html
@@ -35,9 +35,10 @@
     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.css"  rel="stylesheet" /> -->
 
     <!-- Tailwind element -->
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css"
+    />
     <link rel="stylesheet" href="./src/assets/css/output.css" />
     <title>UFI</title>
   </head>
